src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/Extentia_SIM__MP_CustomMapping__c.object-meta.xml
<CustomObject>
    <label>MP_CustomMapping</label>
    <nameField>
        <label>MP_CustomMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_CustomMapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>