src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Description__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>