src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Email__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Email__c</fullName>
    <label>Email</label>
    <type>TextArea</type>
</CustomField>