src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Entity__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Entity__c</fullName>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>