src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Is_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Is_Trigger_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trigger Active</label>
    <type>Checkbox</type>
</CustomField>