src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__IsGeocode__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__IsGeocode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGeocode</label>
    <type>Checkbox</type>
</CustomField>