src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Label__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>