src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Phone__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Phone__c</fullName>
    <label>Phone</label>
    <type>TextArea</type>
</CustomField>