src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/fields/Extentia_SIM__Pin_No__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Pin_No__c</fullName>
    <label>Pin No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>