src/main/default/objects/Extentia_SIM__MP_CustomMapping__c/listViews/Extentia_SIM__All.listView-meta.xml
<ListView>
    <fullName>Extentia_SIM__All</fullName>
    <columns>NAME</columns>
    <columns>Extentia_SIM__Entity__c</columns>
    <columns>Extentia_SIM__Pin_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>